attached_assets/Pasted-025-11-07-10-42-21-50-029766b7-User-rest-express-1-0-0-start-2025-11-07-10-42-21-50-029766b7-User--1762483397327_1762483397327.txt
025-11-07 10:42:21.50
029766b7
User
> rest-express@1.0.0 start
2025-11-07 10:42:21.50
029766b7
User
> NODE_ENV=production node dist/index.js
2025-11-07 10:42:22.68
029766b7
User
file:///home/runner/workspace/dist/index.js:18415
2025-11-07 10:42:22.68
029766b7
User
import { OneSignalClient } from "@onesignal/node-onesignal";
2025-11-07 10:42:22.68
029766b7
User
^^^^^^^^^^^^^^^
2025-11-07 10:42:22.68
029766b7
User
SyntaxError: Named export 'OneSignalClient' not found. The requested module '@onesignal/node-onesignal' is a CommonJS module, which may not support all module.exports as named exports.
2025-11-07 10:42:22.68
029766b7
User
CommonJS modules can always be imported via the default export, for example using:
2025-11-07 10:42:22.68
029766b7
User
2025-11-07 10:42:22.68
029766b7
User
import pkg from '@onesignal/node-onesignal';
2025-11-07 10:42:22.68
029766b7
User
const { OneSignalClient } = pkg;
2025-11-07 10:42:22.68
029766b7
User
2025-11-07 10:42:22.68
029766b7
User
at ModuleJob._instantiate (node:internal/modules/esm/module_job:175:21)
2025-11-07 10:42:22.68
029766b7
User
at async ModuleJob.run (node:internal/modules/esm/module_job:258:5)
2025-11-07 10:42:22.68
029766b7
User
at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
2025-11-07 10:42:22.68
029766b7
User
at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
2025-11-07 10:42:22.68
029766b7
User
2025-11-07 10:42:22.68
029766b7
User
Node.js v20.19.3
2025-11-07 10:42:22.72
029766b7
System
command finished with error [npm run start]: exit status 1
2025-11-07 10:42:30.87
029766b7
User
> rest-express@1.0.0 start
2025-11-07 10:42:30.87
029766b7
User
> NODE_ENV=production node dist/index.js
2025-11-07 10:42:32.09
029766b7
User
file:///home/runner/workspace/dist/index.js:18415
2025-11-07 10:42:32.09
029766b7
User
import { OneSignalClient } from "@onesignal/node-onesignal";
2025-11-07 10:42:32.09
029766b7
User
^^^^^^^^^^^^^^^
2025-11-07 10:42:32.09
029766b7
User
SyntaxError: Named export 'OneSignalClient' not found. The requested module '@onesignal/node-onesignal' is a CommonJS module, which may not support all module.exports as named exports.
2025-11-07 10:42:32.09
029766b7
User
CommonJS modules can always be imported via the default export, for example using:
2025-11-07 10:42:32.09
029766b7
User
2025-11-07 10:42:32.09
029766b7
User
import pkg from '@onesignal/node-onesignal';
2025-11-07 10:42:32.09
029766b7
User
const { OneSignalClient } = pkg;
2025-11-07 10:42:32.09
029766b7
User
2025-11-07 10:42:32.09
029766b7
User
at ModuleJob._instantiate (node:internal/modules/esm/module_job:175:21)
2025-11-07 10:42:32.09
029766b7
User
at async ModuleJob.run (node:internal/modules/esm/module_job:258:5)
2025-11-07 10:42:32.09
029766b7
User
at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
2025-11-07 10:42:32.09
029766b7
User
at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
2025-11-07 10:42:32.09
029766b7
User
2025-11-07 10:42:32.09
029766b7
User
Node.js v20.19.3
2025-11-07 10:42:32.13
029766b7
System
command finished with error [npm run start]: exit status 1
2025-11-07 10:42:40.46
029766b7
System
crash loop detected